@@ -1,5 +1,8 @@
 package br.com.alura.alurator;
 
+import java.lang.reflect.Constructor;
+import java.lang.reflect.InvocationTargetException;
+
 public class Alurator {
 
 	private String pacoteBase;
@@ -19,12 +22,14 @@ public class Alurator {
 
 		try {
 			Class<?> classeControle = Class.forName(pacoteBase + nomeControle);
-
-			Object instanciaControle = classeControle.newInstance();
+			Object instanciaControle = classeControle.getDeclaredConstructor().newInstance();
 			System.out.println(instanciaControle);
-		} catch (ClassNotFoundException | InstantiationException | IllegalAccessException e) {
+		} catch (ClassNotFoundException | InstantiationException | IllegalAccessException | NoSuchMethodException e) {
 			e.printStackTrace();
 			throw new RuntimeException(e);
+		} catch (InvocationTargetException e) {
+			e.printStackTrace();
+			throw new RuntimeException("Erro no construtor!", e.getTargetException());
 		}
 		return null;
 	}
